exam02/print_memory/5-0-print_memory.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r5p41.42.us.org
Darwin 15.6.0 x86_64
$> date
Fri Jul 14 21:54:58 PDT 2017
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2017/piscine-c-exam02/exam_20170715/rvelez

= Git history ==================================================================
$> git -C /var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user log --pretty='%H - %an, %ad : %s'
e847a73d0b8131f73839f0c7df91313072a7511e - Exam 42, Fri Jul 14 21:54:02 2017 -0700 : no time
f1178f36ab5dc18158b9ea4d19d5aebf97eebda5 - Exam 42, Fri Jul 14 21:42:37 2017 -0700 : rev_wstr.c done
d28601ff356b25a848822e6b2a2374a01b4f7f14 - Exam 42, Fri Jul 14 20:42:34 2017 -0700 : ft_range.c done
ab7da3836a5117a5c34e2f324c780c7c3e00ee16 - Exam 42, Fri Jul 14 20:09:50 2017 -0700 : ft_rrange.c done (hopefully)
37d202d60cd78787559e0349d74ec8551513e168 - Exam 42, Fri Jul 14 19:50:20 2017 -0700 : epur_str.c updated (removed unused variable)
ea533db732e37e40c9672bf61bdbf6aa44dcd51d - Exam 42, Fri Jul 14 19:48:09 2017 -0700 : epur_str.c done
4feb61a6b4bfdc49df0650bf67b8e9cc209b5043 - Exam 42, Fri Jul 14 19:12:14 2017 -0700 : do_op.c done
737d6408bd3c91f1c53e56e64a5c4c0961f94e16 - Exam 42, Fri Jul 14 18:48:38 2017 -0700 : search_and_replace.c done
acb3e0ebc3403ae3d7965aba41ccca3849980496 - Exam 42, Fri Jul 14 18:14:10 2017 -0700 : aff_first_param.c done
 
= Collected files ==========================================
$> ls -lAR /var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user
total 8
-rw-r--r--  1 deepthought  deepthought  2324 Jul 14 21:54 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Jul 14 21:54 aff_first_param
drwxr-xr-x  4 deepthought  deepthought   136 Jul 14 21:54 do_op
drwxr-xr-x  3 deepthought  deepthought   102 Jul 14 21:54 epur_str
drwxr-xr-x  3 deepthought  deepthought   102 Jul 14 21:54 ft_range
drwxr-xr-x  3 deepthought  deepthought   102 Jul 14 21:54 ft_rrange
drwxr-xr-x  3 deepthought  deepthought   102 Jul 14 21:54 print_memory
drwxr-xr-x  3 deepthought  deepthought   102 Jul 14 21:54 rev_wstr
drwxr-xr-x  3 deepthought  deepthought   102 Jul 14 21:54 search_and_replace

/var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user/aff_first_param:
total 8
-rw-r--r--  1 deepthought  deepthought  1129 Jul 14 21:54 aff_first_param.c

/var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user/do_op:
total 16
-rw-r--r--  1 deepthought  deepthought  1374 Jul 14 21:54 do_op.c
-rw-r--r--  1 deepthought  deepthought   989 Jul 14 21:54 ft.h

/var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user/epur_str:
total 8
-rw-r--r--  1 deepthought  deepthought  1847 Jul 14 21:54 epur_str.c

/var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user/ft_range:
total 8
-rw-r--r--  1 deepthought  deepthought  1253 Jul 14 21:54 ft_range.c

/var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user/ft_rrange:
total 8
-rw-r--r--  1 deepthought  deepthought  1240 Jul 14 21:54 ft_rrange.c

/var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user/print_memory:
total 8
-rw-r--r--  1 deepthought  deepthought  967 Jul 14 21:54 print_memory.c

/var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user/rev_wstr:
total 8
-rw-r--r--  1 deepthought  deepthought  1817 Jul 14 21:54 rev_wstr.c

/var/folders/4w/z9tyxm_s2j1_3whky276b6f00000gp/T/tmp5ekoBv/user/search_and_replace:
total 8
-rw-r--r--  1 deepthought  deepthought  1323 Jul 14 21:54 search_and_replace.c
 
= print_memory =================================================================
$> gcc -Wextra -Wall -Werror print_memory.c main.c -o user_exe 
print_memory.c:15:31: error: unused parameter 'addr' [-Werror,-Wunused-parameter]
void    print_memory(const void *addr, size_t size)
                                 ^
print_memory.c:15:44: error: unused parameter 'size' [-Werror,-Wunused-parameter]
void    print_memory(const void *addr, size_t size)
                                              ^
2 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
